--- a/labefoods/package.json
+++ b/labefoods/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.5",
     "@react-icons/all-files": "^4.1.0",
