--- a/labefoods/package.json
+++ b/labefoods/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@material-ui/core": "^5.0.0-beta.5",
+    "@material-ui/icons": "^4.11.3",
     "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
